# co-op

./: .dockerignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  TODO.md
.github/workflows/: ci.yml
Backend/test/: license-crypto.test.ts
Frontend/scripts/: build-tauri.js
Frontend/src/: proxy.ts
Frontend/src-tauri/: tauri.conf.json
MobileApp/: README.md  app.json  package-lock.json  package.json
RAG/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  requirements.txt  test_api.py  test_doc.txt
RAG/app/: database.py  main.py  schemas.py  services.py
backend/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  eslint.config.mjs  package-lock.json  package.json  render.yaml  tsconfig.json
backend/scripts/: backfill-supabase-users.mjs  db-common.mjs  license-crypto.mjs  migrate.mjs  seed-admin.ts  seed-investors.ts
docs/: AGENT_ORCHESTRATION.md  ARCHITECTURE.md  CODEBASE_AUDIT.md  DATA_PLANE.md  FEATURE_REMOVAL_AUDIT.md  FEATURE_RESTORATION_AUDIT.md  LICENSING.md  OPERATIONS.md  PRODUCT_POSITIONING.md
frontend/: .env.example  .gitignore  README.md  next.config.js  next.config.tauri.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: chat.rs  constants.rs  graph.rs  guardrails.rs  knowledge_store.rs  lib.rs  license.rs  memory.rs  memory_store.rs  outreach.rs  outreach_helpers.rs  providers.rs  rag.rs  research.rs  research_sources.rs  secrets.rs  security.rs  settings.rs  storage.rs  tools.rs  types.rs  validation.rs  workflows.rs  workspace.rs
frontend/src-tauri/src/knowledge_store/: schema.rs  tests.rs
frontend/src-tauri/src/types/: business.rs  chat.rs  desktop_state.rs  investors.rs  knowledge.rs  outreach.rs  requests.rs  state.rs  workflow.rs
(+377 files in other folders)
