[package]
name = "co-op-desktop"
version = "1.0.3"
description = "Co-Op local-first business orchestration desktop"
authors = ["Co-Op Team"]
license = "MIT"
repository = "https://github.com/Afnanksalal/co-op"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2.8.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
uuid = { version = "1.23", features = ["v4", "serde"] }
keyring = "3.6.3"
aes-gcm = "0.10"
base64 = "0.22"
pdf-extract = "0.10"
quick-xml = "0.39"
zip = { version = "4.2", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
